--- a/foundations/01-css-methods/index.html
+++ b/foundations/01-css-methods/index.html
@@ -8,7 +8,7 @@
         background-color: green;
         color: white;
         font-size: 18px;
-        
+
       }
 
     </style>
@@ -19,8 +19,12 @@
     <title>Methods for Adding CSS</title>
   </head>
   <body>
+
     <div>Style me via the external method!</div>
+
     <p>I would like to be styled with the internal method, please.</p>
-    <button>Inline Method</button>
+
+    <button style="background-color: orange; font-size: 18px;">Inline Method</button>
+
   </body>
 </html>
