--- a/flex/05-flex-modal/index.html
+++ b/flex/05-flex-modal/index.html
@@ -11,7 +11,7 @@
     <div class="modal">
       <div class="icon">!</div>
       <div class="one">
-        <div class="header">
+        <div class="container">
           Are you sure you want to do that?
           <button class="close-button">✖</button>
         </div>
