--- a/flex/05-flex-modal/index.html
+++ b/flex/05-flex-modal/index.html
@@ -10,8 +10,8 @@
   <body>
     <div class="modal">
       <div class="icon">!</div>
-      <div class="one">
-        <div class="container">
+      <div class="container">
+        <div class="header">
           Are you sure you want to do that?
           <button class="close-button">✖</button>
         </div>
